--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 body {
-  background: #111;
-  color: white;
+  background: #071226;
+  color: #e6eef8;
   font-family: 'Inter', sans-serif;
   margin: 0;
   padding: 0;
