--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,26 +1,3 @@
-<!doctype html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>VWAP Monitor</title>
-<link rel="stylesheet" href="/static/css/style.css">
-<!-- Lightweight Charts -->
-<script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
-</head>
-<body>
-<header>
-<h1>VWAP Monitor</h1>
-</header>
-<main id="cards">
-<!-- Cards will be injected by JS -->
-</main>
-
-
 <script>
-const SYMBOLS = {{ symbols|tojson }};
-const UPDATE_INTERVAL = {{ update_interval }};
+    const SYMBOLS = {{ symbols|tojson|safe }};
 </script>
-<script src="/static/js/dashboard.js"></script>
-</body>
-</html>
